# engischool-nsu-oop-2022

./: Antisymmetry.h  BinaryRelation.h  BinaryRelationProperty.h  CMakeLists.txt  Date.cpp  Date.h  Equivalence.h  Irreflexivity.h  Matrix.cpp  Matrix.h  MatrixIterator.h  PartialOrder.h  Preorder.h  README.md  Reflexivity.h  StrictPartialOrder.h  Symmetry.h  Transitivity.h  main  main.cpp
.github/buildsteps/linux/: build.sh
.github/buildsteps/macos/: build.sh  install-dependencies.sh
.github/buildsteps/windows/: build.bat  install-dependencies.bat
.github/workflows/: ci.yml
lab/: Date.cpp  Date.h
